<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_S"
        android:drawableLeft="@mipmap/mcoerc_logo"
        android:gravity="center"
        android:text="@string/mcoerc"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/sv_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_L"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_XXL"
        android:paddingEnd="@dimen/padding_XXL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_S"
            android:layout_marginBottom="@dimen/margin_S"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/color_secondary"
            android:textSize="@dimen/text_large" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XXL"
            android:layout_marginBottom="@dimen/margin_M"
            android:text="@string/login_now"
            android:textColor="@color/color_primary" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_S"
            android:text="@string/please_login"
            android:textColor="@color/color_devider" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XL"
            android:background="@drawable/text_view"
            android:hint="Mobile"
            android:maxLength="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XXL"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_S"
            android:onClick="register"
            android:padding="@dimen/padding_S"
            android:text="@string/new_login"
            android:textAlignment="center"
            android:textColor="@color/color_secondary" />
    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_waves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>