<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_S"
        android:drawableLeft="@mipmap/mcoerc_logo"
        android:gravity="center"
        android:textSize="@dimen/text_medium"
        android:text="@string/mcoerc"
        app:layout_constraintBottom_toTopOf="@+id/sv_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_M"
        android:text="@string/register_here"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/color_primary" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_M"
        android:text="@string/login_now"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sv_container"
        android:textColor="@color/color_secondary" />


    <ScrollView
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/padding_XXL"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_M"
            android:layout_marginBottom="@dimen/margin_XXL"
            android:orientation="vertical"
            android:padding="@dimen/padding_S">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/middle_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/middle_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_XL"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_S"
                    android:padding="@dimen/padding_S"
                    android:text="Gender"
                    android:textSize="@dimen/text_large" />

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_S"
                    android:padding="@dimen/padding_S"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_S"
                    android:padding="@dimen/padding_S"
                    android:text="@string/female" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/mobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="phone|textNoSuggestions"
                    android:maxLength="10"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parent_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/parent_mobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_parent_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="phone|textNoSuggestions"
                    android:maxLength="10"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/college"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:hint="@string/college">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_college"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="text|textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_S"
                android:layout_marginBottom="@dimen/margin_XXL"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="text|textNoSuggestions"
                    android:textSize="@dimen/text_medium" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_M"
        android:padding="@dimen/padding_S"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/sv_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>